add button on images in slidder

--- a/pages/category.html
+++ b/pages/category.html
@@ -284,23 +284,21 @@
 
       <!-- Cards with text right -->
       <div>
-        <div class="row-card-holder">
-          <h4 class="head-title">Fun desks to keep your creativity flowing</h4>
-          <a class="row card row-card g-0" href="#">
-            <img
-              class="col-12 col-sm-6 col-md-8"
-              src="https://www.ikea.com/images/a-white-green-pahl-desk-a-white-micke-desk-and-a-grey-turquo-b4502b450450609155755731b37c1ffb.jpg?f=xl"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="col-12 col-sm-6 col-md-4 card-body card-right">
-              <h4 class="card-text head-title">Meet your new study buddies</h4>
-              <button class="card-btn">
-                <i class="bi bi-arrow-right"></i>
-              </button>
-            </div>
-          </a>
-        </div>
+        <h4 class="head-title my-5">Fun desks to keep your creativity flowing</h4>
+        <a class="row card row-card g-0" href="#">
+          <img
+            class="col-12 col-sm-6 col-md-8"
+            src="https://www.ikea.com/images/a-white-green-pahl-desk-a-white-micke-desk-and-a-grey-turquo-b4502b450450609155755731b37c1ffb.jpg?f=xl"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="col-12 col-sm-6 col-md-4 card-body card-right">
+            <h4 class="card-text head-title">Meet your new study buddies</h4>
+            <button class="card-btn">
+              <i class="bi bi-arrow-right"></i>
+            </button>
+          </div>
+        </a>
       </div>
 
       <!-- Gallery div -->
@@ -430,42 +428,48 @@
 
       <!-- Card with text right -->
       <div>
-        <div class="row-card-holder">
-          <h4 class="head-title">A chair that's up for the job, no matter what it is</h4>
-          <a class="row card row-card g-0" href="#">
-            <img
-              class="col-12 col-sm-6 col-md-8"
-              src="https://www.ikea.com/images/tips-for-using-one-chair-for-different-activities-3b7e863226f0c8fb9443d224536074e0.jpg?f=xl"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="col-12 col-sm-6 col-md-4 card-body card-right" style="background-color: #263242;">
-              <h4 class="card-text head-title">One chair to do it all</h4>
-              <button class="card-btn">
-                <i class="bi bi-arrow-right"></i>
-              </button>
-            </div>
-          </a>
-        </div>
+        <h4 class="head-title  my-5">A chair that's up for the job, no matter what it is</h4>
+        <a class="row card row-card g-0" href="#">
+          <img
+            class="col-12 col-sm-6 col-md-8"
+            src="https://www.ikea.com/images/tips-for-using-one-chair-for-different-activities-3b7e863226f0c8fb9443d224536074e0.jpg?f=xl"
+            class="card-img-top"
+            alt="..."
+          />
+          <div class="col-12 col-sm-6 col-md-4 card-body card-right" style="background-color: #263242;">
+            <h4 class="card-text head-title">One chair to do it all</h4>
+            <button class="card-btn">
+              <i class="bi bi-arrow-right"></i>
+            </button>
+          </div>
+        </a>
       </div>
 
       <!-- Slidder static -->
-      <div class="images-cards-container">
-        <div class="image-card col-6 col-md-2">
+      <div>
+        <h4 class="head-title my-5">Quick guides to a more sustainable home</h4>
+        <div class="images-cards-container">
+        <div class="image-card col-6 col-md-3">
           <img src="https://www.ikea.com/images/a-hand-controlling-the-flow-of-water-from-an-arched-mixer-ta-7ab00d7ab5cbae1bc654fab0e4d0fdd7.jpg?f=xxs"/>
+          <div class="button-holder"><button>Water & energy</button></div>
         </div>
-        <div class="image-card col-6 col-md-2">
+        <div class="image-card col-6 col-md-3">
           <img src="https://www.ikea.com/images/a-beige-upholstered-bed-covered-in-white-bed-linen-with-a-ro-1000cebd78155c6e4692a6e2895e1217.jpg?f=xxs"/>
+          <div class="button-holder"><button>Materials</button></div>
         </div>
-        <div class="image-card col-6 col-md-2">
+        <div class="image-card col-6 col-md-3">
           <img src="https://www.ikea.com/images/a-sheer-white-curtain-billowing-in-front-of-a-sunny-window-w-00318c01fb4b82f4a6b99a0f4f582cca.jpg?f=xxs"/>
+          <div class="button-holder"><button>Health</button></div>
         </div>
-        <div class="image-card col-6 col-md-2">
+        <div class="image-card col-6 col-md-3">
           <img src="https://www.ikea.com/images/a-white-countertop-with-a-person-chopping-green-vegetables-o-95f2de0ed6972bf6e3f564a9bdafd93e.jpg?f=xxs"/>
+          <div class="button-holder"><button>Food</button></div>        
         </div>
-        <div class="image-card col-6 col-md-2">
+        <div class="image-card col-6 col-md-3">
           <img src="https://www.ikea.com/images/a-woman-in-a-sunny-room-with-a-bottle-of-cleaning-fluid-in-o-a8375bd30fe0294ea5e69c1d936585de.jpg?f=xxs"/>
+          <div class="button-holder"><button>Furniture</button></div>        
         </div>
+      </div>
       </div>
     </div>
   </body>
