edit images slidder

--- a/pages/category.html
+++ b/pages/category.html
@@ -449,23 +449,23 @@
       <div>
         <h4 class="head-title my-5">Quick guides to a more sustainable home</h4>
         <div class="images-cards-container">
-        <div class="image-card col-6 col-md-3">
+        <div class="image-card ">
           <img src="https://www.ikea.com/images/a-hand-controlling-the-flow-of-water-from-an-arched-mixer-ta-7ab00d7ab5cbae1bc654fab0e4d0fdd7.jpg?f=xxs"/>
           <div class="button-holder"><button>Water & energy</button></div>
         </div>
-        <div class="image-card col-6 col-md-3">
+        <div class="image-card ">
           <img src="https://www.ikea.com/images/a-beige-upholstered-bed-covered-in-white-bed-linen-with-a-ro-1000cebd78155c6e4692a6e2895e1217.jpg?f=xxs"/>
           <div class="button-holder"><button>Materials</button></div>
         </div>
-        <div class="image-card col-6 col-md-3">
+        <div class="image-card">
           <img src="https://www.ikea.com/images/a-sheer-white-curtain-billowing-in-front-of-a-sunny-window-w-00318c01fb4b82f4a6b99a0f4f582cca.jpg?f=xxs"/>
           <div class="button-holder"><button>Health</button></div>
         </div>
-        <div class="image-card col-6 col-md-3">
+        <div class="image-card ">
           <img src="https://www.ikea.com/images/a-white-countertop-with-a-person-chopping-green-vegetables-o-95f2de0ed6972bf6e3f564a9bdafd93e.jpg?f=xxs"/>
           <div class="button-holder"><button>Food</button></div>        
         </div>
-        <div class="image-card col-6 col-md-3">
+        <div class="image-card">
           <img src="https://www.ikea.com/images/a-woman-in-a-sunny-room-with-a-bottle-of-cleaning-fluid-in-o-a8375bd30fe0294ea5e69c1d936585de.jpg?f=xxs"/>
           <div class="button-holder"><button>Furniture</button></div>        
         </div>
