--- a/pages/products.html
+++ b/pages/products.html
@@ -32,7 +32,7 @@
     <!-- Bootstrap JS -->
     <div class="body-container">
       <div class="header-messages"></div>
-      <div class="navbar navbar-expand-xl navbar-light  bg-white">
+      <div class="navbar navbar-expand-xl navbar-light bg-white px-4">
         <a href="../index.html" class="navbar-brand">
           <img class="logo" src="../assets/images/ikea-logo.svg" alt="logo"
         /></a>
@@ -86,12 +86,16 @@
       </div>
       <!-- end of nav bar -->
 
-    <div class="breadcrumb-container  border-top">
-        <nav style="--bs-breadcrumb-divider: '>';"  aria-label="breadcrumb">
-            <ol class="breadcrumb breadcrumb-list">
-              <li class="breadcrumb-item"><a class='bc-breadcrumb__link' href="#">products</a></li>
-              <li class="breadcrumb-item" aria-current="page"><a class='bc-breadcrumb__link' href="#">beds</a></li>
-            </ol>
+      <div class="breadcrumb-container border-top">
+        <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
+          <ol class="breadcrumb breadcrumb-list">
+            <li class="breadcrumb-item">
+              <a class="bc-breadcrumb__link" href="#">products</a>
+            </li>
+            <li class="breadcrumb-item" aria-current="page">
+              <a class="bc-breadcrumb__link" href="#">beds</a>
+            </li>
+          </ol>
         </nav>
       </div>
 
@@ -99,11 +103,15 @@
         <h3>Children beds</h3>
       </div>
 
-    <section class='col-12 col-md-7 col-lg-7'>
-      <p class='description '>     
-         We understand that growing kids have lots of needs. Like a quiet spot to relax or a place to do their homework. That's why loft beds for kids are a super-smart multi-tasking solution, helping you free up space for a desk, sofa, wardrobe or pillow fort. Bring home a children's loft bed today!
-      </p>
-    </section>
+      <section class="col-12 col-md-7 col-lg-7">
+        <p class="description">
+          We understand that growing kids have lots of needs. Like a quiet spot
+          to relax or a place to do their homework. That's why loft beds for
+          kids are a super-smart multi-tasking solution, helping you free up
+          space for a desk, sofa, wardrobe or pillow fort. Bring home a
+          children's loft bed today!
+        </p>
+      </section>
 
       <div class="row sticky-top filter-row">
         <div class="col-12 col-md-7 col-lg-7">
