--- a/pages/category.html
+++ b/pages/category.html
@@ -308,7 +308,7 @@
             Stylish and smart wardrobes to fit your space
           </h4>
           <div class="d-flex flex-row justify-content-between">
-            <p class="small-text">
+            <p class="small-text col-md-7">
               High quality wardrobes are full of choices so you can get the look
               you want on the outside and the interior organisers you want on
               the inside.
@@ -451,7 +451,7 @@
         <div class="images-cards-container">
         <div class="image-card ">
           <img src="https://www.ikea.com/images/a-hand-controlling-the-flow-of-water-from-an-arched-mixer-ta-7ab00d7ab5cbae1bc654fab0e4d0fdd7.jpg?f=xxs"/>
-          <div class="button-holder"><button>Water & energy</button></div>
+          <div class="button-holder"><button><a href="guide.html"></a>Water & energy</button></div>
         </div>
         <div class="image-card ">
           <img src="https://www.ikea.com/images/a-beige-upholstered-bed-covered-in-white-bed-linen-with-a-ro-1000cebd78155c6e4692a6e2895e1217.jpg?f=xxs"/>
