--- a/index.html
+++ b/index.html
@@ -13,13 +13,23 @@
       crossorigin="anonymous"
     />
 
+    <!-- Fontawesome CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <link rel="stylesheet" href="assets/css/main.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="body-container">
       <div class="header-messages"></div>
-      <div class="navbar navbar-expand-xl navbar-light fixed-top bg-white">
+
+      <div class="navbar navbar-expand-xl navbar-light fixed-top bg-white pt-4">
         <a href="#" class="navbar-brand">
           <img class="logo" src="assets/images/ikea-logo.svg" alt="logo"
         /></a>
@@ -73,7 +83,7 @@
       </div>
 
       <!-- Gallery div -->
-      <div class="border-top mt-nav-2 pt-nav">
+      <div class="border-top mt-nav-3 pt-nav">
         <div class="image-gallery row g-4">
           <div class="col-12 col-lg-6">
             <img
@@ -271,6 +281,115 @@
       </div>
     </div>
 
+    <footer class="footer">
+      <div class="row pb-5 mb-2">
+        <div class="col-3">
+          <ul>
+            <li>
+              <p>Useful links</p>
+            </li>
+            <li>
+              <a href="#">Catalogue and brochures</a>
+            </li>
+            <li><a href="#">IKEA shopping app</a></li>
+            <li><a href="#">Planning tools</a></li>
+            <li><a href="#">Stores</a></li>
+            <li><a href="#">IKEA food</a></li>
+            <li><a href="#">IKEA FAMILY</a></li>
+          </ul>
+        </div>
+        <div class="col-3">
+          <ul>
+            <li>
+              <p>Customer service</p>
+            </li>
+            <li><a href="#">About services</a></li>
+            <li><a href="#">About shopping</a></li>
+            <li><a href="#">Return policy</a></li>
+            <li><a href="#">Contact us</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Give us your feedback</a></li>
+          </ul>
+        </div>
+        <div class="col-3">
+          <ul>
+            <li>
+              <p>This is IKEA</p>
+            </li>
+            <li><a href="#">About IKEA</a></li>
+            <li><a href="#">Democratic design</a></li>
+            <li><a href="#">Sustainable everyday</a></li>
+            <li><a href="#">Community engagement</a></li>
+            <li><a href="#">Working at IKEA</a></li>
+          </ul>
+        </div>
+        <div class="col-3">
+          <ul>
+            <li>
+              <p>General information</p>
+            </li>
+            <li><a href="#">Newsroom</a></li>
+            <li><a href="#">Product recalls</a></li>
+            <li><a href="#">Product guides</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div
+        class="
+          footer-social-languages
+          d-flex
+          justify-content-between
+          pb-4
+          border-bottom
+        "
+      >
+        <ul class="social-media-links d-flex">
+          <li>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+          </li>
+        </ul>
+        <div class="language-selector d-flex align-items-center">
+          <div class="country-selector p-2">
+            <a href="#" class="country-btn d-flex align-items-center"
+              ><i class="bi bi-globe"></i>
+              <p class="px-2 m-0">Change country</p></a
+            >
+          </div>
+          <div class="language-switch">
+            <select name="language-switch" id="language-switch" class="p-2">
+              <option value="en">English</option>
+              <option value="ar">العربية</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-info d-flex justify-content-between pb-3 pt-3 mt-4">
+        <div class="copyright mb-2">
+          <p>&copy; Inter IKEA Systems B.V 1999-2021</p>
+        </div>
+        <div class="legal-links">
+          <ul class="d-flex">
+            <li>
+              <a href="#">Privacy policy</a>
+            </li>
+            <li>
+              <a href="#">Cookie policy</a>
+            </li>
+            <li>
+              <a href="#">Terms and conditions</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
     <!-- Bootstrap JS -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
