--- a/pages/products.html
+++ b/pages/products.html
@@ -95,7 +95,7 @@
         </nav>
       </div>
 
-      <div style="margin: 1.875rem 0">
+      <div class="section-title">
         <h3>Children beds</h3>
       </div>
 
@@ -106,7 +106,7 @@
     </section>
 
       <div class="row sticky-top filter-row">
-        <div class="col-12 col-md-7 col-lg-7">
+        <div class="col-12 col-md-9 col-lg-9">
           <button type="button" class="btn btn-light filter-btn">
             compare
           </button>
@@ -289,7 +289,7 @@
           </button>
         </div>
 
-        <div class="col-5">
+        <div class="col-3">
           <div class="float-lg-end float-md-end">
             <p class="d-inline-flex">2 items</p>
             <div class="btn-group me-2" role="group" aria-label="First group">
@@ -304,10 +304,11 @@
         </div>
       </div>   
 
-      <div class='mt-3 row '>
+      <div class=' row '>
+        <!-- product -->
         <div class="col-6 col-md-4 col-lg-3  prod-container">
             <header class="d-flex align-items-center justify-content-between "  style="padding:  .625rem;"  > 
-              <div class="form-check">
+              <div class="form-check" >
                 <input
                   class="form-check-input"
                   type="checkbox"
@@ -322,7 +323,7 @@
 
             <a class="card category-card col-12 " href="#">
               <img
-                src="https://www.ikea.com/eg/en/images/products/vimle-3…axemara-light-blue__0949437_pe799723_s5.jpg?f=xxs"
+                src="	https://www.ikea.com/eg/en/images/products/soederhamn-chaise-longue-samsta-orange__0802365_pe768432_s5.jpg?f=xxs"
                 class="card-img-top"
                 alt="sofa"
               />
@@ -486,7 +487,82 @@
             </a>
           </footer>
       </div>
+      </div>
 
+      <div class="section-title">
+        <h3>Recommended for you</h3>
+      </div>
+      <!-- slider of products -->
+      <div class="images-cards-container">
+        <div class="image-card ">
+          <img src="https://www.ikea.com/images/a-hand-controlling-the-flow-of-water-from-an-arched-mixer-ta-7ab00d7ab5cbae1bc654fab0e4d0fdd7.jpg?f=xxs"/>
+          <div class="button-holder"><button>Water & energy</button></div>
+        </div>
+        <div class="image-card ">
+          <img src="https://www.ikea.com/images/a-beige-upholstered-bed-covered-in-white-bed-linen-with-a-ro-1000cebd78155c6e4692a6e2895e1217.jpg?f=xxs"/>
+          <div class="button-holder"><button>Materials</button></div>
+        </div>
+        <div class="image-card">
+          <img src="https://www.ikea.com/images/a-sheer-white-curtain-billowing-in-front-of-a-sunny-window-w-00318c01fb4b82f4a6b99a0f4f582cca.jpg?f=xxs"/>
+          <div class="button-holder"><button>Health</button></div>
+        </div>
+        <div class="image-card ">
+          <img src="https://www.ikea.com/images/a-white-countertop-with-a-person-chopping-green-vegetables-o-95f2de0ed6972bf6e3f564a9bdafd93e.jpg?f=xxs"/>
+          <div class="button-holder"><button>Food</button></div>        
+        </div>
+        <div class="image-card">
+          <img src="https://www.ikea.com/images/a-woman-in-a-sunny-room-with-a-bottle-of-cleaning-fluid-in-o-a8375bd30fe0294ea5e69c1d936585de.jpg?f=xxs"/>
+          <div class="button-holder"><button>Furniture</button></div>        
+        </div>
+      </div>
+
+      <div class="section-title">
+        <h3>Related Categories</h3>
+      </div>
+      <div class="row mx-auto g-3">
+        <a class="card category-card col-4 col-lg-4" href="#">
+          <img
+            src="https://www.ikea.com/global/assets/navigation/images/fabric-sofas-10661.jpeg?imwidth=400"
+            class="card-img-top"
+            alt="Fabric Sofa"
+          />
+          <div class="card-body category-body">
+            <p class="card-text">Fabric Sofa</p>
+          </div>
+        </a>
+
+        <a class="card category-card col-4 col-lg-4" href="#">
+          <img
+            src="https://www.ikea.com/global/assets/navigation/images/sofa-beds-10663.jpeg?imwidth=400"
+            class="card-img-top"
+            alt="Fabric Sofa"
+          />
+          <div class="card-body category-body">
+            <p class="card-text">Fabric Sofa</p>
+          </div>
+        </a>
+
+        <a class="card category-card col-4 col-lg-4" href="#">
+          <img
+            src="https://www.ikea.com/global/assets/navigation/images/modular-fabric-sofas-15358.jpeg?imwidth=500"
+            class="card-img-top"
+            alt="Fabric Sofa"
+          />
+          <div class="card-body category-body">
+            <p class="card-text">Fabric Sofa</p>
+          </div>
+        </a>
+
+        <a class="card category-card col-4 col-lg-4" href="#">
+          <img
+            src="https://www.ikea.com/global/assets/navigation/images/modular-leather-coated-fabric-sofas-16235.jpeg?imwidth=500"
+            class="card-img-top"
+            alt="Fabric Sofa"
+          />
+          <div class="card-body category-body">
+            <p class="card-text">Fabric Sofa</p>
+          </div>
+        </a>
 
       </div>
     </div>
