--- a/pages/category.html
+++ b/pages/category.html
@@ -15,11 +15,217 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
     />
+    <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+    integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+    crossorigin="anonymous"
+  />
     <link rel="stylesheet" href="../assets/css/main.css" />
     <title>Document</title>
   </head>
 
   <body>
+    <!--#region sidebar menu -->
+        <button class="menu-btn mx-2 my-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+          <i class="bi bi-list"></i>
+      </button>
+  
+      <div class="offcanvas offcanvas-start menu-bar" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+      <div class="offcanvas-header menu-header">
+          <button type="button" class="menu-btn" data-bs-dismiss="offcanvas" onclick="{ShowMain()}"><i class="bi bi-x"></i></button>
+          <img src="https://www.ikea.com/eg/en/static/ikea-logo.f7d9229f806b59ec64cb.svg"/>
+      </div>
+      <!-- main body -->
+      <div id="main-menu" class="offcanvas-body menu-body">
+          <ul>
+              <li onclick="{ShowDiv('p-content')}"><a href="#">Products</a></li>
+              <li onclick="{ShowDiv('r-content')}"><a href="#">Rooms</a></li>
+              <li onclick="{ShowDiv('o-content')}"><a href="#">Offers</a></li>
+              <li onclick="{ShowDiv('w-content')}"><a href="#">What's new</a></li>
+              <li class="fs-6" onclick="{ShowDiv('ins-content')}"><a href="#">Inspiration</a></li>
+          </ul>
+          <ul class="small-text-list">
+              <li><a href="#">Stores</a></li>
+              <li><a href="#">Services for your Business</a></li>
+              <li><a href="#">Customer Service</a></li>
+              <li><a href="#">About IKEA</a></li>
+              <li><a href="#">Contact us</a></li>                
+          </ul>
+          <div class="d-flex flex-row justify-content-between">
+              <select type="button" class="selector-btn">
+              <i class="fas fa-chevron-down"></i>
+              <option>English</option>
+              <option>العربية</option>
+              </select>
+              <button class="selector-btn">
+                  <i class="bi bi-globe"></i>
+                  Change country
+              </button>
+          </div>
+      </div>
+  
+      <!-- product body -->
+      <div id="p-content" class="offcanvas-body menu-body other-content">
+          <div class="d-flex flex-row">
+              <button class="position-sticky menu-btn" onclick="{ShowMain()}"><i class="bi bi-arrow-left-short"></i></button>
+              <span class="head-title">Products</span>
+          </div>
+          <ul class="small-text-list my-4">
+              <li><a href="#">Furniture</a></li>
+              <li><a href="#">Kitchen & appliances</a></li>
+              <li><a href="#">Beds & mattresses</a></li>
+              <li><a href="#">Storage & organisation</a></li>
+              <li><a href="#">Textiles</a></li>
+              <li><a href="#">Decoration</a></li>                
+              <li><a href="#">Bathroom products</a></li>                
+              <li><a href="#">Outdoor products</a></li>                
+              <li><a href="#">Lighting</a></li>                
+              <li><a href="#">Rugs, mats & flooring</a></li>                
+              <li><a href="#">Baby & children</a></li>
+              <li><a href="#">More</a></li>                            
+          </ul>
+      </div>
+  
+      <!-- Room body -->
+      <div id="r-content" class="offcanvas-body menu-body other-content">
+          <div class="d-flex flex-row">
+              <button class="position-sticky menu-btn" onclick="{ShowMain()}"><i class="bi bi-arrow-left-short"></i></button>
+              <span class="head-title">Rooms</span>
+          </div>
+          <div class="row mx-auto g-4 my-4">
+              <a class="card category-card col-3 col-md-5" href="#">
+                  <img
+                  src="https://www.ikea.com/images/an-enhet-washbasin-and-cabinet-and-open-shelving-with-a-roun-08edae8f788e473a9605e4b398900cb6.jpg?f=xxxs"
+                  class="card-img-top"
+                  alt="..."
+                  />
+                  <div class="card-body category-body">
+                  <p class="card-text">Bathroom</p>
+                  </div>
+              </a>
+              <a class="card category-card col-3 col-md-5" href="#">
+                  <img
+                  src="https://www.ikea.com/images/a-vadheim-upholstered-bed-with-vitkloever-bed-linen-stands-i-18d599765b42ee3396abb67b8a245606.jpg?f=xxxs"
+                  class="card-img-top"
+                  alt="..."
+                  />
+                  <div class="card-body category-body">
+                  <p class="card-text">Bedroom</p>
+                  </div>
+              </a>
+              <a class="card category-card col-3 col-md-5" href="#">
+                  <img
+                  src="https://www.ikea.com/images/a-tuffing-bunk-bed-in-a-childrens-room-with-a-football-and-t-57c6d97b0e97fa11316c8fea272a7f0d.jpg?f=xxxs"
+                  class="card-img-top"
+                  alt="..."
+                  />
+                  <div class="card-body category-body">
+                  <p class="card-text">Children's room</p>
+                  </div>
+              </a>
+              <a class="card category-card col-3 col-md-5" href="#">
+                  <img
+                  src="https://www.ikea.com/images/a-dining-area-by-a-window-with-a-large-dining-table-six-meta-46845de50b0ad73d0b9731140141b6e3.jpg?f=xxxs"
+                  class="card-img-top"
+                  alt="..."
+                  />
+                  <div class="card-body category-body">
+                  <p class="card-text">Dining</p>
+                  </div>
+              </a>
+              <a class="card category-card col-3 col-md-5" href="#">
+                  <img
+                      src="https://www.ikea.com/images/a-hallway-where-a-pinnig-coat-rack-and-shoe-bench-stand-agai-2dc4a103bc0ac4158557a90ebc0aadd3.jpg?f=xxxs"
+                      class="card-img-top"
+                      alt="..."
+                  />
+                  <div class="card-body category-body">
+                      <p class="card-text">Hallway</p>
+                  </div>
+                  </a>
+                  <a class="card category-card col-3 col-md-5" href="#">
+                  <img
+                      src="https://www.ikea.com/images/an-industrial-style-studio-at-home-with-high-ceilings-furnit-d6ba3f797a6cbed87478bad1d8dbd652.jpg?f=xxxs"
+                      class="card-img-top"
+                      alt="..."
+                  />
+                  <div class="card-body category-body">
+                      <p class="card-text">Home office</p>
+                  </div>
+                  </a>
+                  <a class="card category-card col-3 col-md-5" href="#">
+                  <img
+                      src="https://www.ikea.com/images/a-contemporary-and-decluttered-kitchen-with-bodarp-kitchen-f-0fd7f2c13233700c427237c449cc2982.jpg?f=xxxs"
+                      class="card-img-top"
+                      alt="..."
+                  />
+                  <div class="card-body category-body">
+                      <p class="card-text">Kitchen</p>
+                  </div>
+                  </a>
+                  <a class="card category-card col-3 col-md-5" href="#">
+                  <img
+                      src="https://www.ikea.com/images/an-aepplaryd-sofa-with-three-coffee-tables-in-front-on-a-blu-ad40b43a98816f1805e40c1d7ef6d681.jpg?f=xxxs"
+                      class="card-img-top"
+                      alt="..."
+                  />
+                  <div class="card-body category-body">
+                      <p class="card-text">Living room</p>
+                  </div>
+                  </a>
+                  <a class="card category-card col-3 col-md-5" href="#">
+                  <img
+                      src="https://www.ikea.com/images/a-small-balcony-with-a-wooden-table-and-chairs-artificial-gr-f6ba826dc19b000e2975955fd78e45a4.jpg?f=xxxs"
+                      class="card-img-top"
+                      alt="..."
+                  />
+                  <div class="card-body category-body">
+                      <p class="card-text">Garden & balcony</p>
+                  </div>
+                  </a>
+          </div>
+      </div>
+  
+      <!-- offers body -->
+      <div id="o-content" class="offcanvas-body menu-body other-content">
+          <div class="d-flex flex-row">
+              <button class="position-sticky menu-btn" onclick="{ShowMain()}"><i class="bi bi-arrow-left-short"></i></button>
+              <span class="head-title">Offers</span>
+          </div>
+          <ul class="small-text-list my-4">
+              <li><a href="#">New Lower Price</a></li>
+              <li><a href="#">Sale</a></li>                          
+          </ul>
+      </div>
+  
+      <!-- what's new body -->
+      <div id="w-content" class="offcanvas-body menu-body other-content">
+          <div class="d-flex flex-row">
+              <button class="position-sticky menu-btn" onclick="{ShowMain()}"><i class="bi bi-arrow-left-short"></i></button>
+              <span class="head-title">Offers</span>
+          </div>
+          <ul class="small-text-list my-4">
+              <li><a href="#">New Products</a></li>
+              <li><a href="#">Stories</a></li>                          
+          </ul>
+      </div>
+  
+      <!-- inspiration body -->
+      <div id="ins-content" class="offcanvas-body menu-body other-content">
+          <div class="d-flex flex-row">
+              <button class="position-sticky menu-btn" onclick="{ShowMain()}"><i class="bi bi-arrow-left-short"></i></button>
+              <span class="head-title">Offers</span>
+          </div>
+          <ul class="small-text-list my-4">
+              <li><a href="#">Ideas</a></li>
+              <li><a href="#">Stories</a></li>
+              <li><a href="#">Rooms inspirations</a></li>                          
+          </ul>
+      </div>
+      </div>
+      <!--#endregion -->
+
     <div class="body-container">
       <div class="header-messages"></div>
       <div class="navbar navbar-expand-xl navbar-light fixed-top bg-white">
@@ -451,7 +657,7 @@
         <div class="images-cards-container">
         <div class="image-card ">
           <img src="https://www.ikea.com/images/a-hand-controlling-the-flow-of-water-from-an-arched-mixer-ta-7ab00d7ab5cbae1bc654fab0e4d0fdd7.jpg?f=xxs"/>
-          <div class="button-holder"><button><a href="guide.html"></a>Water & energy</button></div>
+          <div class="button-holder"><button><a href="./guide.html">Water & energy</a></button></div>
         </div>
         <div class="image-card ">
           <img src="https://www.ikea.com/images/a-beige-upholstered-bed-covered-in-white-bed-linen-with-a-ro-1000cebd78155c6e4692a6e2895e1217.jpg?f=xxs"/>
@@ -472,5 +678,22 @@
       </div>
       </div>
     </div>
-  </body>
+
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script>
+    var menu= document.getElementById("main-menu");
+    var offCanva=document.getElementById("offcanvasExample");
+    var content;
+    function ShowDiv(id){
+        content = document.getElementById(id);
+        content.style.display="block";
+        menu.style.display="none";
+    }
+    function ShowMain(){
+        menu.style.display="block";
+        content.style.display="none";
+    }
+</script>  
+</body>
 </html>
