--- a/pages/products.html
+++ b/pages/products.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <!-- Bootstrap JS -->
-    <div class="body-container">
+    <div class="body-container overflow-hidden">
       <div class="header-messages"></div>
       <div class="navbar navbar-expand-xl navbar-light bg-white px-4">
         <a href="../index.html" class="navbar-brand">
@@ -114,7 +114,7 @@
       </section>
 
       <div class="row sticky-top filter-row">
-        <div class="col-12 col-md-9 col-lg-9">
+        <div class="col-sm-12 col-md-9 col-lg-9">
           <button type="button" class="btn btn-light filter-btn">
             compare
           </button>
@@ -297,7 +297,7 @@
           </button>
         </div>
 
-        <div class="col-3">
+        <div class="col-lg-3 col-md-3 col-12">
           <div class="float-lg-end float-md-end">
             <p class="d-inline-flex">2 items</p>
             <div class="btn-group me-2" role="group" aria-label="First group">
