--- a/pages/category.html
+++ b/pages/category.html
@@ -281,10 +281,23 @@
         </button>
       </div>
 
+      <div class="breadcrumb-container border-top mt-nav-2 pt-nav">
+        <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
+          <ol class="breadcrumb breadcrumb-list">
+            <li class="breadcrumb-item">
+              <a class="bc-breadcrumb__link" href="#">products</a>
+            </li>
+            <li class="breadcrumb-item" aria-current="page">
+              <a class="bc-breadcrumb__link" href="#">Furniture</a>
+            </li>
+          </ol>
+        </nav>
+      </div>
+      
       <!-- Categories cards -->
-      <div class="mt-nav-2 pt-nav border-top">
-        <div class="row mx-auto g-3">
-          <h4 class="head-title">Furniture</h4>
+      <div>
+        <h4 class="head-title">Furniture</h4>
+        <div class="row mx-auto g-3 categories-slidder">
           <a class="card category-card col-4 col-lg-2" href="#">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/gaming-furniture-55002.jpeg?imwidth=300"
