add contact us and store pages

--- a/pages/stores.html
+++ b/pages/stores.html
@@ -8,23 +8,15 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <link 
-    rel="stylesheet" 
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" 
-    />
-    <link
-    rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
-    integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
-    crossorigin="anonymous"
-  />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+        integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous" />
     <link rel="stylesheet" href="../assets/css/main.css" />
     <link rel="shortcut icon" href="../assets/images/ikea-logo.png" />
-    <title>Guide</title>
+    <title>Stores</title>
 </head>
 
 <body>
-
     <!--#region sidebar menu -->
     <button class="menu-btn mx-2 my-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
         aria-controls="offcanvasExample">
@@ -188,7 +180,7 @@
 
     </div>
     <!--#endregion -->
-    
+
     <div class="body-container">
         <div class="header-messages"></div>
         <div class="navbar navbar-expand-xl navbar-light fixed-top bg-white">
@@ -238,91 +230,89 @@
             </button>
         </div>
 
+        <!-- header -->
         <div class="mt-nav-2 pt-nav border-top">
             <div class="row big-title col-12 col-md-7 p-2">
-                How to save energy and water at home
+                Choose your nearest IKEA store
             </div>
         </div>
-        <div class="row small-text col-12 col-md-7 my-5 p-2">
-            Every day, a home might waste many litres of fresh water - and let energy fly out of the window. But
-            there's no need to flush your money down the drain. You can look at your household habits in a different
-            way to both cut your utility bills and to reduce the strain on precious resources.
-        </div>
-        <div class="row my-5">
-            <video aria-describedby="d07ea1d0-de19-11ea-a7da-d7e69f0cd980-alt" controls autoplay muted loop
-                disablepictureinpicture
-                src="https://www.ikea.com/ext/ingkadam/m/3462c03f30ea0aa7/original/05_IKEA_sustainability_SmallStepsBigImpact_9s_16x9_offline_v03_EL-1.mp4">
-            </video>
-        </div>
-        <div class="row my-5">
-            <video class="col-md-6" controls autoplay muted loop
-                src="https://www.ikea.com/ext/ingkadam/m/478eaf467d346665/original/07_IKEA_sustainability_SimplySustainable_5s_3x4_offline_v05_Grade-1.mp4"
-                autoplay>Sorry, your browser doesn't support embedded videos.
-            </video>
-            <div class="col-md-6 p-5">
-                <div class="head-title my-2">Saving energy is saving money</div>
-                <p class="small-text my-5">You can use less energy - and cut your bills - with a fresh look at your
-                    lighting, heating and home
-                    appliances.
-                    <br><br>
-                    LED light bulbs, for example, use up to 85% less energy and last 20 times longer than incandescent
-                    bulbs. You save even more if you turn them off as you leave the room (so simple with the TRÅDFRI
-                    remote control). To easily lower your heating costs, you can use insulating blinds or thicker
-                    curtains when the temperature drops.
-                    <br><br>
-                    What about that power-hungry tumble dryer? When you can drip-dry on a rack instead, your clothes
-                    suffer less wear-and-tear into the bargain.
-                    <br><br>
-                    Of course, electrical appliances are modern-day essentials but the newer models, rated AA+ or
-                    higher, are very energy efficient. And, if you want to think big, home solar can reduce your
-                    electricity payments, as well as your carbon emissions.</p>
-                <button class="see-all-btn row">See all wireless LED bulbs</button>
-            </div>
-        </div>
-        <div class="row my-5">
-            <video class="col-md-6" controls autoplay muted loop
-                src="https://www.ikea.com/ext/ingkadam/m/121ecfe3f4cf63a3/original/06_IKEA_sustainability_BeingSmartWithWater_5s_3x4_offline_v03_EL_Grade-1.mp4"
-                autoplay>Sorry, your browser doesn't support embedded videos.
-            </video>
-            <div class="col-md-6 p-5">
-                <div class="head-title my-2">How to use less water - without even trying</div>
-                <p class="small-text my-5">Of all the water in the world, less than 3% is fresh. So, the careful use of
-                    it makes sense - financially and environmentally. Happily, some modern products can do the
-                    water-saving for you.
-                    <br><br>
-                    For example, a pressure-compensating aerator is standard across the whole IKEA range of taps and
-                    showers. This reduces the amount of water coming out - by up to 50% in some bathroom taps - but
-                    keeps the flow at the level you want. So, you use less energy to heat it, even more when the tap has
-                    a cold-start function.
-                    <br><br>
-                    Today's dishwashers and washing machines usually have an 'eco mode' option that's highly water- and
-                    energy-efficient. In fact, a fully-laden dishwasher on this setting will use less water than if you
-                    were to do it all by hand.</p>
-                <button class="see-all-btn row">See all kitchen mixer taps</button>
-            </div>
+        <div class="row small-text col-12 col-md-7 p-2">
+            Select your local IKEA store to see the location, opening hours, offers & events, services, and more.
         </div>
 
-        <div class="row my-5">
-            <video class="col-md-6" controls autoplay muted loop
-                src="https://www.ikea.com/ext/ingkadam/m/3838ee3d2b66f91/original/08_IKEA_sustainability_MakeEachDropCount_5s_3x4_offline_v04_EL_Grade-1.mp4"
-                autoplay>Sorry, your browser doesn't support embedded videos.
-            </video>
-            <div class="col-md-6 p-5">
-                <div class="head-title my-2">Save some for the plants, too</div>
-                <p class="small-text my-5">A typical home can save many litres of water each day, simply by turning off
-                    the tap while you brush your teeth. Or by washing your salad in a bowl instead of under running
-                    water. You can then give this water to your houseplants. And while you wait for the shower to warm
-                    up, you can collect the water for the same purpose.
-
-                    Fresh water may be an expensive resource - but rainwater is free to collect for use on your garden.
-                    (If you wait until sunset, you lose less water through evaporation.)
-
-                    In warmer weather, you can chill your tap water in the fridge so that you don't have to run the tap
-                    to cool down first. Of course, not everyone in the world has drinkable water on tap. So, perhaps
-                    those of us that do ought to value every last drop.</p>
-                <button class="see-all-btn row">See all shower heads</button>
+        <!-- locations accordian -->
+        <div class="accordion accordion-flush my-5" id="accordionFlushExample">
+            <div class="accordion-item p-4">
+              <h2 class="accordion-header" id="flush-headingOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    IKEA Cairo store
+                </button>
+              </h2>
+              <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                    <div class="row small-text col-12 col-md-7 p-2">
+                        We are glad that you have chosen our store. Here you will find all information about IKEA Cairo store and our local offer.</div>
+                    <img src="https://www.ikea.com/images/cairo-store-db07cb6826c51fb59f479c5ec2d140b1.jpg?f=xxxl" width="100%"/>
+                    <div class="row my-5 ">
+                        <iframe class="col-sm-6" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1727.1296683817493!2d31.4073508!3d30.0294169!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x38e6fd139b6eb6ee!2sIKEA%20-%20Cairo%20Festival%20City!5e0!3m2!1sen!2seg!4v1640968514950!5m2!1sen!2seg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <p class="small-text col-sm-6 col-lg-3">
+                            IKEA Cairo store, Cairo Festival City
+                            Ring Road, 5th settlement, P.O. Box 11835
+                            <br><br>
+                            <a href="https://www.google.com/maps/place/IKEA+-+Cairo+Festival+City/@30.0294169,31.4073508,18z/data=!4m5!3m4!1s0x0:0x38e6fd139b6eb6ee!8m2!3d30.0295603!4d31.4072651">Get direction</a>
+                            <br><br>
+                            <strong>Hotline: </strong>16576
+                            <br><br>
+                            <strong>Store, Bistro, and Swedish Food Market: </strong>
+                            <br><br>
+                            Saturday - Wednesday- 10:00 AM to 10:00 PM
+                            Thursday - Friday- 10:00 AM to 11:00 PM
+                            <br><br> <br>
+                            <strong>Restaurant,</strong>
+                            Saturday - Wednesday: 09:00 AM to 09:30 PM
+                            Thursday - Friday: 09:00 AM to 10:30 PM
+                        </p>                    
+                    </div>
+                </div>
+              </div>
             </div>
-        </div>
+            <div class="accordion-item p-4">
+              <h2 class="accordion-header" id="flush-headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                    IKEA Mall of Arabia
+                </button>
+              </h2>
+              <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                    <img src="https://www.ikea.com/images/78/d3/78d32779e9eaa63235feb1309e5ac8c7.jpg?f=xxxl" width="100%"/>
+                    <div class="row my-5 ">
+                        <iframe class="col-sm-6" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13819.94005468486!2d30.9749948!3d30.0085867!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x17a19fbdd41296cc!2sIKEA%20-%20Mall%20Of%20Arabia!5e0!3m2!1sen!2seg!4v1640969784395!5m2!1sen!2seg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>                        <p class="small-text col-sm-6 col-lg-3">
+                            IKEA Mall of Arabia
+                            Mall of Arabia, Expansion phase Gate 17 - 6th of October City
+                            <br><br>
+                            <a href="https://www.google.com/maps/place/IKEA+-+Mall+Of+Arabia/@30.0085867,30.9749948,15z/data=!4m2!3m1!1s0x0:0x17a19fbdd41296cc?sa=X&ved=2ahUKEwiir4O8iLXvAhVEilwKHd3UDQYQ_BIwHnoECC4QBQ">Get direction</a>
+                            <br><br>
+                            <strong>Hotline: </strong>16576
+                            <br><br>
+                            <strong>Store, Bistro, and Swedish Food Market: </strong>
+                            <br><br>
+                            Saturday - Wednesday- 10:00 AM to 10:00 PM
+                            Thursday - Friday- 10:00 AM to 11:00 PM
+                            <br><br>
+                            <strong>Restaurant,</strong>
+                            Saturday - Wednesday: 09:00 AM to 09:30 PM
+                            Thursday - Friday: 09:00 AM to 10:30 PM
+                            <br><br>
+                            <strong>Exit café:</strong>
+                            Saturday - Wednesday: 09:00 AM to 09:30 PM
+                            Thursday - Friday: 09:00 AM to 10:30 PM
+                        </p>                    
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="../assets/js/menu.js"></script> 
