--- a/pages/category.html
+++ b/pages/category.html
@@ -22,7 +22,8 @@
     crossorigin="anonymous"
   />
     <link rel="stylesheet" href="../assets/css/main.css" />
-    <title>Document</title>
+    <link rel="shortcut icon" href="../assets/images/ikea-logo.png" />
+    <title>Furniture</title>
   </head>
 
   <body>
@@ -43,16 +44,12 @@
               <li onclick="{ShowDiv('r-content')}"><a href="#">Rooms</a></li>
               <li onclick="{ShowDiv('o-content')}"><a href="#">Offers</a></li>
               <li onclick="{ShowDiv('w-content')}"><a href="#">What's new</a></li>
-              <li class="fs-6" onclick="{ShowDiv('ins-content')}"><a href="#">Inspiration</a></li>
           </ul>
           <ul class="small-text-list">
-              <li><a href="#">Stores</a></li>
-              <li><a href="#">Services for your Business</a></li>
-              <li><a href="#">Customer Service</a></li>
-              <li><a href="#">About IKEA</a></li>
-              <li><a href="#">Contact us</a></li>                
+              <li><a href="stores.html">Stores</a></li>
+              <li><a href="conactUs.html">Contact us</a></li>                
           </ul>
-          <div class="d-flex flex-row justify-content-between">
+          <div class="d-flex flex-row justify-content-around">
               <select type="button" class="selector-btn">
               <i class="fas fa-chevron-down"></i>
               <option>English</option>
@@ -72,7 +69,7 @@
               <span class="head-title">Products</span>
           </div>
           <ul class="small-text-list my-4">
-              <li><a href="#">Furniture</a></li>
+              <li><a href="category.html">Furniture</a></li>
               <li><a href="#">Kitchen & appliances</a></li>
               <li><a href="#">Beds & mattresses</a></li>
               <li><a href="#">Storage & organisation</a></li>
@@ -210,19 +207,7 @@
               <li><a href="#">Stories</a></li>                          
           </ul>
       </div>
-  
-      <!-- inspiration body -->
-      <div id="ins-content" class="offcanvas-body menu-body other-content">
-          <div class="d-flex flex-row">
-              <button class="position-sticky menu-btn" onclick="{ShowMain()}"><i class="bi bi-arrow-left-short"></i></button>
-              <span class="head-title">Offers</span>
-          </div>
-          <ul class="small-text-list my-4">
-              <li><a href="#">Ideas</a></li>
-              <li><a href="#">Stories</a></li>
-              <li><a href="#">Rooms inspirations</a></li>                          
-          </ul>
-      </div>
+
       </div>
       <!--#endregion -->
 
@@ -281,6 +266,7 @@
         </button>
       </div>
 
+      <!-- bread-crumbs -->
       <div class="breadcrumb-container border-top mt-nav-2 pt-nav">
         <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
           <ol class="breadcrumb breadcrumb-list">
@@ -692,21 +678,7 @@
       </div>
     </div>
 
-    <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script>
-    var menu= document.getElementById("main-menu");
-    var offCanva=document.getElementById("offcanvasExample");
-    var content;
-    function ShowDiv(id){
-        content = document.getElementById(id);
-        content.style.display="block";
-        menu.style.display="none";
-    }
-    function ShowMain(){
-        menu.style.display="block";
-        content.style.display="none";
-    }
-</script>  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="../assets/js/menu.js"></script>   
 </body>
 </html>
