--- a/pages/conactUs.html
+++ b/pages/conactUs.html
@@ -8,23 +8,15 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <link 
-    rel="stylesheet" 
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" 
-    />
-    <link
-    rel="stylesheet"
-    href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
-    integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
-    crossorigin="anonymous"
-  />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+        integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous" />
     <link rel="stylesheet" href="../assets/css/main.css" />
     <link rel="shortcut icon" href="../assets/images/ikea-logo.png" />
-    <title>Guide</title>
+    <title>Contact us</title>
 </head>
 
 <body>
-
     <!--#region sidebar menu -->
     <button class="menu-btn mx-2 my-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
         aria-controls="offcanvasExample">
@@ -185,10 +177,9 @@
                 <li><a href="#">Stories</a></li>
             </ul>
         </div>
-
     </div>
     <!--#endregion -->
-    
+
     <div class="body-container">
         <div class="header-messages"></div>
         <div class="navbar navbar-expand-xl navbar-light fixed-top bg-white">
@@ -238,91 +229,81 @@
             </button>
         </div>
 
+        <!-- header -->
         <div class="mt-nav-2 pt-nav border-top">
             <div class="row big-title col-12 col-md-7 p-2">
-                How to save energy and water at home
+                Contact us
             </div>
         </div>
-        <div class="row small-text col-12 col-md-7 my-5 p-2">
-            Every day, a home might waste many litres of fresh water - and let energy fly out of the window. But
-            there's no need to flush your money down the drain. You can look at your household habits in a different
-            way to both cut your utility bills and to reduce the strain on precious resources.
-        </div>
-        <div class="row my-5">
-            <video aria-describedby="d07ea1d0-de19-11ea-a7da-d7e69f0cd980-alt" controls autoplay muted loop
-                disablepictureinpicture
-                src="https://www.ikea.com/ext/ingkadam/m/3462c03f30ea0aa7/original/05_IKEA_sustainability_SmallStepsBigImpact_9s_16x9_offline_v03_EL-1.mp4">
-            </video>
-        </div>
-        <div class="row my-5">
-            <video class="col-md-6" controls autoplay muted loop
-                src="https://www.ikea.com/ext/ingkadam/m/478eaf467d346665/original/07_IKEA_sustainability_SimplySustainable_5s_3x4_offline_v05_Grade-1.mp4"
-                autoplay>Sorry, your browser doesn't support embedded videos.
-            </video>
-            <div class="col-md-6 p-5">
-                <div class="head-title my-2">Saving energy is saving money</div>
-                <p class="small-text my-5">You can use less energy - and cut your bills - with a fresh look at your
-                    lighting, heating and home
-                    appliances.
-                    <br><br>
-                    LED light bulbs, for example, use up to 85% less energy and last 20 times longer than incandescent
-                    bulbs. You save even more if you turn them off as you leave the room (so simple with the TRÅDFRI
-                    remote control). To easily lower your heating costs, you can use insulating blinds or thicker
-                    curtains when the temperature drops.
-                    <br><br>
-                    What about that power-hungry tumble dryer? When you can drip-dry on a rack instead, your clothes
-                    suffer less wear-and-tear into the bargain.
-                    <br><br>
-                    Of course, electrical appliances are modern-day essentials but the newer models, rated AA+ or
-                    higher, are very energy efficient. And, if you want to think big, home solar can reduce your
-                    electricity payments, as well as your carbon emissions.</p>
-                <button class="see-all-btn row">See all wireless LED bulbs</button>
-            </div>
-        </div>
-        <div class="row my-5">
-            <video class="col-md-6" controls autoplay muted loop
-                src="https://www.ikea.com/ext/ingkadam/m/121ecfe3f4cf63a3/original/06_IKEA_sustainability_BeingSmartWithWater_5s_3x4_offline_v03_EL_Grade-1.mp4"
-                autoplay>Sorry, your browser doesn't support embedded videos.
-            </video>
-            <div class="col-md-6 p-5">
-                <div class="head-title my-2">How to use less water - without even trying</div>
-                <p class="small-text my-5">Of all the water in the world, less than 3% is fresh. So, the careful use of
-                    it makes sense - financially and environmentally. Happily, some modern products can do the
-                    water-saving for you.
-                    <br><br>
-                    For example, a pressure-compensating aerator is standard across the whole IKEA range of taps and
-                    showers. This reduces the amount of water coming out - by up to 50% in some bathroom taps - but
-                    keeps the flow at the level you want. So, you use less energy to heat it, even more when the tap has
-                    a cold-start function.
-                    <br><br>
-                    Today's dishwashers and washing machines usually have an 'eco mode' option that's highly water- and
-                    energy-efficient. In fact, a fully-laden dishwasher on this setting will use less water than if you
-                    were to do it all by hand.</p>
-                <button class="see-all-btn row">See all kitchen mixer taps</button>
-            </div>
-        </div>
+        <img class="my-5"  width="100%" src="https://www.ikea.com/images/contact-us-d476724620b76882001ccbb69b133c70.jpg?f=xxxl"/>
+        <p class="row small-text col-12 col-md-7 p-2">Question or query, help is at hand. Contact IKEA Egypt customer services or find the answer below.</p>
 
-        <div class="row my-5">
-            <video class="col-md-6" controls autoplay muted loop
-                src="https://www.ikea.com/ext/ingkadam/m/3838ee3d2b66f91/original/08_IKEA_sustainability_MakeEachDropCount_5s_3x4_offline_v04_EL_Grade-1.mp4"
-                autoplay>Sorry, your browser doesn't support embedded videos.
-            </video>
-            <div class="col-md-6 p-5">
-                <div class="head-title my-2">Save some for the plants, too</div>
-                <p class="small-text my-5">A typical home can save many litres of water each day, simply by turning off
-                    the tap while you brush your teeth. Or by washing your salad in a bowl instead of under running
-                    water. You can then give this water to your houseplants. And while you wait for the shower to warm
-                    up, you can collect the water for the same purpose.
 
-                    Fresh water may be an expensive resource - but rainwater is free to collect for use on your garden.
-                    (If you wait until sunset, you lose less water through evaporation.)
+        <!-- Form -->
+        <form class="container col-6 my-5 message-form">
+            <input class="form-control form-control-lg mb-3" type="text" placeholder="Name" aria-label=".form-control-lg example">
+            <input class="form-control form-control-lg mb-3" type="text" placeholder="Email" aria-label=".form-control-lg example">
+            <input class="form-control form-control-lg mb-3" type="text" placeholder="Phone" aria-label=".form-control-lg example">
+            <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                <option selected>Store</option>
+                <option value="1">IKEA Cairo</option>
+                <option value="2">IKEA October store</option>
+            </select>
+            <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                <option selected>Subject</option>
+                <option value="1">Unlock website account</option>
+                <option value="2">IKEA FAMILY</option>
+                <option value="3">Services</option>
+                <option value="4">Compliants</option>
+                <option value="5">Other</option>
+            </select>
+            <input class="form-control form-control-lg mb-3" type="text" placeholder="Message" aria-label=".form-control-lg example">
+            <input class="form-control form-control-lg" id="formFileLg" type="file">
+            <ul class="p-0 fst-italic mt-2" style="color: grey;">
+                <li>*You can upload mulitple files</li>
+                <li>*Supported files are Images/Videos/PDF</li>
+                <li>*File should not exceed 5MB in size</li>
+            </ul>
+            <div class="row">
+                <button type="submit" class="btn message-btn col-10 mx-auto text-white">Submit</button>
+            </div>
+        </form>
 
-                    In warmer weather, you can chill your tap water in the fridge so that you don't have to run the tap
-                    to cool down first. Of course, not everyone in the world has drinkable water on tap. So, perhaps
-                    those of us that do ought to value every last drop.</p>
-                <button class="see-all-btn row">See all shower heads</button>
+        <hr class="my-5">
+        <div class="row">
+            <div class="col-sm-6 d-flex flex-column">
+                <strong class="my-1">IKEA Cairo</strong>
+                <strong class="small-text">Address:</strong>
+                <p class="small-text">
+                    IKEA Cairo store, Cairo Festival City<br>
+                    Ring Road, 5th settlement, P.O. Box 11835       
+                </p>
+                <a class="small-text my-2" href="https://www.google.com/maps/place/IKEA+-+Cairo+Festival+City/@30.0286209,31.4048461,16.75z/data=!4m5!3m4!1s0x0:0x38e6fd139b6eb6ee!8m2!3d30.02956!4d31.4072648">
+                 Map location   
+                </a>
+                <strong class="small-text">Contact Details</strong>
+                <p class="small-text">Hotline: 16576</p>
+            </div>
+            <div class="col-sm-6 d-flex flex-column">
+                <strong class="my-1">IKEA October store</strong>
+                <strong class="small-text">Address:</strong>
+                <p class="small-text">
+                    Mall of Arabia, Expansion phase Gate 17<br>
+                    6th of October City
+                </p>
+                <a class="small-text my-2" href="https://www.google.com/maps/dir//Unnamed+Road,+Giza+Governorate,+Egypt/@30.0096587,30.9762724,18z/data=!4m9!4m8!1m0!1m5!1m1!1s0x145857507c943c93:0x2f2e3f7051eeb72b!2m2!1d30.9768107!2d30.0096141!3e0">
+                 Map location   
+                </a>
+                <strong class="small-text">Contact Details</strong>
+                <p class="small-text">Hotline: 16576</p>
             </div>
         </div>
+        <hr class="my-5">
+        <div class="row head-title p-2">Follow us on</div>
+        <span class="small-text my-5">
+            <a href="https://www.facebook.com/ikeaegypt/">Facebook</a><span> | </span>
+            <a href="https://instagram.com/ikeaegypt/">Instagram</a><span> | </span>
+            <a href="https://www.youtube.com/user/ikeaegypt">Youtube</a></span>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="../assets/js/menu.js"></script> 
