update pages with footer

--- a/pages/conactUs.html
+++ b/pages/conactUs.html
@@ -305,6 +305,107 @@
             <a href="https://instagram.com/ikeaegypt/">Instagram</a><span> | </span>
             <a href="https://www.youtube.com/user/ikeaegypt">Youtube</a></span>
     </div>
+    <footer class="footer">
+        <div class="row pb-5 mb-2">
+          <div class="col-3">
+            <ul>
+              <li>
+                <p>Useful links</p>
+              </li>
+              <li>
+                <a href="#">Catalogue and brochures</a>
+              </li>
+              <li><a href="#">IKEA shopping app</a></li>
+              <li><a href="#">Planning tools</a></li>
+              <li><a href="#">Stores</a></li>
+              <li><a href="#">IKEA food</a></li>
+              <li><a href="#">IKEA FAMILY</a></li>
+            </ul>
+          </div>
+          <div class="col-3">
+            <ul>
+              <li>
+                <p>Customer service</p>
+              </li>
+              <li><a href="#">About services</a></li>
+              <li><a href="#">About shopping</a></li>
+              <li><a href="#">Return policy</a></li>
+              <li><a href="#">Contact us</a></li>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Give us your feedback</a></li>
+            </ul>
+          </div>
+          <div class="col-3">
+            <ul>
+              <li>
+                <p>This is IKEA</p>
+              </li>
+              <li><a href="#">About IKEA</a></li>
+              <li><a href="#">Democratic design</a></li>
+              <li><a href="#">Sustainable everyday</a></li>
+              <li><a href="#">Community engagement</a></li>
+              <li><a href="#">Working at IKEA</a></li>
+            </ul>
+          </div>
+          <div class="col-3">
+            <ul>
+              <li>
+                <p>General information</p>
+              </li>
+              <li><a href="#">Newsroom</a></li>
+              <li><a href="#">Product recalls</a></li>
+              <li><a href="#">Product guides</a></li>
+            </ul>
+          </div>
+        </div>
+  
+        <div class="footer-social-languages d-flex justify-content-between pb-4 border-bottom">
+          <ul class="social-media-links d-flex">
+            <li>
+              <a href="#"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fab fa-youtube"></i></a>
+            </li>
+          </ul>
+          <div class="language-selector d-flex align-items-center">
+            <div class="country-selector p-2">
+              <a href="#" class="country-btn d-flex align-items-center"
+                ><i class="bi bi-globe"></i>
+                <p class="px-2 m-0">Change country</p></a
+              >
+            </div>
+            <div class="language-switch">
+              <select name="language-switch" id="language-switch" class="p-2">
+                <option value="en">English</option>
+                <option value="ar">العربية</option>
+              </select>
+            </div>
+          </div>
+        </div>
+  
+        <div class="footer-info d-flex justify-content-between pb-3 pt-3 mt-4">
+          <div class="copyright mb-2">
+            <p>&copy; Inter IKEA Systems B.V 1999-2021</p>
+          </div>
+          <div class="legal-links">
+            <ul class="d-flex">
+              <li>
+                <a href="#">Privacy policy</a>
+              </li>
+              <li>
+                <a href="#">Cookie policy</a>
+              </li>
+              <li>
+                <a href="#">Terms and conditions</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="../assets/js/menu.js"></script> 
 </body>
