--- a/Log-in.html
+++ b/Log-in.html
@@ -27,7 +27,7 @@
           <section class="col-md-5 col-12 login-heading">
             <h3>Login to your IKEA account</h3>
             <p>Login or create an account to access your latest shopping lists within our website and IKEA Shopping app.</p>
-            <button class="login-creation">Create account</button>
+            <button class="login-creation" onclick="OpenSignInPage()">Create account</button>
           </section>
 
           <!-- Center Section -->
@@ -57,5 +57,12 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+
+    <script>
+      function OpenSignInPage() 
+      {
+        location.assign("./sign-in.html")
+      }
+    </script>
   </body>
 </html>
