--- a/pages/products.html
+++ b/pages/products.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <!-- Bootstrap JS -->
-    <div class="body-container overflow-hidden">
+    <div class="body-container">
       <div class="header-messages"></div>
       <div class="navbar navbar-expand-xl navbar-light bg-white px-4">
         <a href="../index.html" class="navbar-brand">
